plugins/kotlin/idea/tests/testData/multiplatform/ktij22295/common/common.kt
expect class <!LINE_MARKER("descr='Has actuals in jvm module'")!>Shared<!>

interface <!LINE_MARKER("descr='Is implemented by I1ImplOfShared Press ... to navigate'")!>I1<!><T1>

class I1ImplOfShared : I1<Shared>
